--- a/index.html
+++ b/index.html
@@ -116,58 +116,58 @@
     <section class="top-dest">
       <div class="container-fluid">
         <div
-          class="row top-text mb-5 justify-content-end align-content-end align-items-end"
+          class="row top-text mb-5"
         >
-          <div class="col-md-10">
+          <div class="col-xxl-9 col-xl-9 col-lg-8 col-md-8">
             <p class="cursive-text top-dest-sub">Plan Your Trips</p>
             <h2 class="top-dest-title bold-title">
               Let us plan you a <br />
               perfect Holiday
             </h2>
           </div>
-          <div class="col-md-2 my-auto">
+          <div class="col-xxl-3 col-xl-3 col-lg-4 col-md-4 my-auto">
             <a class="btns btn-out-sea" href="">Browse Categories <i class="i-crush fa-solid fa-arrow-right fa-beat fa-xs"></i></a>
           </div>
         </div>
         <div
-          class="row justify-content-around align-items-center top-dest-inner"
+          class="row justify-content-center align-items-center top-dest-inner"
         >
-          <div class="col-md-2">
+          <div class="col-xxl-2 col-xl-4 col-md-6">
             <div class="top-dest-item">
               <div class="item-1"></div>
             </div>
             <p class="dest-cont">City Tours</p>
             <p class="dest-cont-mini">5 Tours - From <span>₹550</span></p>
           </div>
-          <div class="col-md-2">
+          <div class="col-xxl-2 col-xl-4 col-md-6">
             <div class="top-dest-item">
               <div class="item-2"></div>
             </div>
             <p class="dest-cont">City Tours</p>
             <p class="dest-cont-mini">5 Tours - From <span>₹550</span></p>
           </div>
-          <div class="col-md-2">
+          <div class="col-xxl-2 col-xl-4 col-md-6">
             <div class="top-dest-item">
               <div class="item-3"></div>
             </div>
             <p class="dest-cont">City Tours</p>
             <p class="dest-cont-mini">5 Tours - From <span>₹550</span></p>
           </div>
-          <div class="col-md-2">
+          <div class="col-xxl-2 col-xl-4 col-md-6">
             <div class="top-dest-item">
               <div class="item-4"></div>
             </div>
             <p class="dest-cont">City Tours</p>
             <p class="dest-cont-mini">5 Tours - From <span>₹550</span></p>
           </div>
-          <div class="col-md-2">
+          <div class="col-xxl-2 col-xl-4 col-md-6">
             <div class="top-dest-item">
               <div class="item-5"></div>
             </div>
             <p class="dest-cont">City Tours</p>
             <p class="dest-cont-mini">5 Tours - From <span>₹550</span></p>
           </div>
-          <div class="col-md-2">
+          <div class="col-xxl-2 col-xl-4 col-md-6">
             <div class="top-dest-item">
               <div class="item-6"></div>
             </div>
