--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,22 +11,15 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/home-about.css">
     <!-- Bootstrap  -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
 
     <!-- Font Awesome 6.4.0 -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="page-header">
         <h2>About Us</h2>
@@ -33,27 +27,32 @@
     <div>
         <div class="row">
             <div class="col-md-6">
-                <img src="https://img.freepik.com/free-photo/travel-concept-with-baggage_23-2149153260.jpg?2&w=826&t=st=1680610356~exp=1680610956~hmac=1a26dd131c3360ac1ebfd2ab51040df038648ec360154d232684940d98e14352">
+                <img
+                    src="https://img.freepik.com/free-photo/travel-concept-with-baggage_23-2149153260.jpg?2&w=826&t=st=1680610356~exp=1680610956~hmac=1a26dd131c3360ac1ebfd2ab51040df038648ec360154d232684940d98e14352">
             </div>
             <div class="col-md-6">
                 <div class="about-us">
-                <p class="cursive-text align-item-center">About Us</p>
-                <h1 class="bold-title">Royal Travels <br>Planning<br>Your Journey</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus quo cum asperiores totam est nihil voluptate cupiditate suscipit. 
-                Quaerat quam quibusdam repellendus autem facilis unde animi illo? Illo neque numquam provident laborum molestiae quam.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur inventore asperiores veniam dolor explicabo, quaerat non libero aut autem repellat.</p>
+                    <p class="cursive-text align-item-center">About Us</p>
+                    <h1 class="bold-title">Royal Travels <br>Planning<br>Your Journey</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus quo cum asperiores totam
+                        est nihil voluptate cupiditate suscipit.
+                        Quaerat quam quibusdam repellendus autem facilis unde animi illo? Illo neque numquam provident
+                        laborum molestiae quam.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur inventore asperiores veniam
+                        dolor explicabo, quaerat non libero aut autem repellat.</p>
                 </div>
                 <div class="col-md-3 my-auto">
-                    <a class="btns btn-out-sea" href="">Learn More &nbsp; <i class="fa-solid fa-arrow-right fa-beat fa-xs"></i></a>
+                    <a class="btns btn-out-sea" href="">Learn More &nbsp; <i
+                            class="fa-solid fa-arrow-right fa-beat fa-xs"></i></a>
                 </div>
             </div>
         </div>
         <!-- Why Us content  -->
         <section class="fea-cons">
             <div class="container-fluid fea-con">
-                    <p class="cursive-text text-center">Why Us</p>  
-                    <h1 class="bold-title text-center">We Make All The<br>Process Easy</h1>
-            </div>   
+                <p class="cursive-text text-center">Why Us</p>
+                <h1 class="bold-title text-center">We Make All The<br>Process Easy</h1>
+            </div>
             <div class="row feature">
                 <!-- box 1 -->
                 <div class="col-md-4">
@@ -63,7 +62,8 @@
                         </div>
                         <div class="col-md-9">
                             <p class="small-title">Best Travel Agent</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam quae et porro ab tempore quaerat nisi nemo.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
+                                quae et porro ab tempore quaerat nisi nemo.</p>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,8 @@
                         </div>
                         <div class="col-md-9">
                             <p class="small-title">Trust & Safety</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam quae et porro ab tempore quaerat nisi nemo.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
+                                quae et porro ab tempore quaerat nisi nemo.</p>
                         </div>
                     </div>
                 </div>
@@ -87,11 +88,12 @@
                         </div>
                         <div class="col-md-9">
                             <p class="small-title">Best Price Guarantee</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam quae et porro ab tempore quaerat nisi nemo.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
+                                quae et porro ab tempore quaerat nisi nemo.</p>
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
             <div class="row feature">
                 <div class="col-md-4">
                     <div class="row align-items-center justify-content-around">
@@ -100,7 +102,8 @@
                         </div>
                         <div class="col-md-9">
                             <p class="small-title">Beautiful Places</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam quae et porro ab tempore quaerat nisi nemo.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
+                                quae et porro ab tempore quaerat nisi nemo.</p>
                         </div>
                     </div>
                 </div>
@@ -112,7 +115,8 @@
                         </div>
                         <div class="col-md-9">
                             <p class="small-title">Passionate Travel</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam quae et porro ab tempore quaerat nisi nemo.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
+                                quae et porro ab tempore quaerat nisi nemo.</p>
                         </div>
                     </div>
                 </div>
@@ -124,13 +128,14 @@
                         </div>
                         <div class="col-md-9">
                             <p class="small-title">Fast Booking</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam quae et porro ab tempore quaerat nisi nemo.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
+                                quae et porro ab tempore quaerat nisi nemo.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </div>  
+    </div>
     <div class="social">
         <div class="s-media1"><i class="fa-brands fa-facebook-f"></i></div>
         <div class="s-media2"><i class="fa-brands fa-instagram"></i></div>
@@ -138,4 +143,5 @@
         <div class="s-media4"><i class="fa-brands fa-whatsapp"></i></div>
     </div>
 </body>
+
 </html>
