--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <div class="collapse navbar-collapse navspace">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="">Home <span>.</span></a>
+              <a class="nav-link" href="">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">About <span>.</span></a>
+              <a class="nav-link" href="">About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Spots <span>.</span></a>
+              <a class="nav-link" href="">Spots </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/gallery.html">Gallery <span>.</span></a>
+              <a class="nav-link" href="/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact <span>.</span></a>
+              <a class="nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
