Change top mail Address

--- a/index.html
+++ b/index.html
@@ -76,15 +76,12 @@
         <div class="menu-right">
           <ul>
             <li>
-              <a href="tel:9123555804"
-                ><i class="fa-solid fa-phone fa-beat fa-xs i-crush"></i> 9123 654 786</a
-              >
+              <a href="tel:9123555804"><i class="fa-solid fa-phone fa-beat fa-xs i-crush"></i> 9123 654 786</a>
             </li>
             <li>
               <a href="mailto: covaitravel@gmail.com"
                 ><i class="fa-solid fa-envelope fa-beat fa-xs i-crush"></i>
-                covaitravel@gmail.com</a
-              >
+                covaitravel@gmail.com</a>
             </li>
           </ul>
         </div>
