--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     <section class="pkg-sec container">
       <div class="row">
-        <div class="col-md-4 pkg-box">
+        <div class="col-lg-4 pkg-box">
           <div class="pkg-img">
             <img class="img-fluid" src="/images/ooty.webp" alt="">
           </div>
@@ -278,7 +278,7 @@
             <button class="btn btn-crush">Know More</button>
           </div>
         </div>
-        <div class="col-md-4 pkg-box">
+        <div class="col-lg-4 pkg-box">
           <div class="pkg-img">
             <img class="img-fluid" src="/images/munnar.webp" alt="">
           </div>
@@ -289,9 +289,9 @@
             <button class="btn btn-crush">Know More</button>
           </div>
         </div>
-        <div class="col-md-4 pkg-box">
+        <div class="col-lg-4 pkg-box">
           <div class="pkg-img">
-            <img class="" src="/images/mudumalai.webp" alt="">
+            <img class="img-fluid" src="/images/mudumalai.webp" alt="">
           </div>
           <h3 class="pkg-title">Mudumalai</h3>
           <p class="pkg-days">3 Days / 5 Nights</p>
