Home Page Responsive Complete

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <section class="head-banner">
       <div class="row">
-        <div class=" col-1 col-sm-1 col-lg-3 box-left">
+        <div class=" col-12 col-sm-12 col-lg-3 box-left">
           <div class="intro-box">
             <p class="cursive-text">Natural Beauty</p>
             <h2 class="bold-title">
@@ -100,10 +100,10 @@
               most engaging <br />
               places
             </h2>
-            <a class="btns btn-crush slide-btn" href="">Explore Now</a>
+            <a class="btns btn-crush slide-btn mb-5" href="">Explore Now</a>
           </div>
         </div>
-        <div class="col-11 col-sm-11 col-lg-9 box-right"></div>
+        <div class="col-12 col-sm-12 col-lg-9 box-right"></div>
       </div>
     </section>
 
@@ -274,6 +274,7 @@
 
 <!-- End About Section -->
 
+<!---->
     <section class="pkg-sec container">
       <div class="row">
         <div class="col-lg-4 pkg-box">
