Contact page responsive
Contact page responsive bug fixing

--- a/contact.html
+++ b/contact.html
@@ -45,26 +45,26 @@
     <!-- Addreess Section -->
     <section class="container contact-add">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-5 col-sm-12">
           <div class="add-box">
             <!-- Address -->
           <div class="row ">
-            <div class="col-md-2">
+            <div class="col-3">
               <span class="fa fa-map-location-dot fa-2xl"></span>
             </div>
-            <div class="col-md-10">
+            <div class="col-9">
               <p class="fw-bold">Address</p>
               <p>
-                2nd Floor, Hari Complex, Opp to Prozone Mall, Sathy Road,
+                2nd Floor, Hari Complex, Opp to Prozone Mall, Sathy Road, 
                 Saravanampatti, Coimbatore - 641035
               </p>
             </div><hr>
             <!-- Contact -->
             <div class="row">
-              <div class="col-md-2">
+              <div class="col-3">
                 <span class="fa fa-solid fa-mobile fa-2xl"></span>
               </div>
-              <div class="col-md-10">
+              <div class="col-9">
                 <p class="fw-bold">Contact</p>
                 <p>
                   +91 91234 56789 <br />
@@ -74,20 +74,20 @@
             </div><hr>
             <!-- Mail -->
             <div class="row">
-              <div class="col-md-2">
+              <div class="col-3">
                 <span class="fa fa-solid fa-envelope fa-2xl"></span>
               </div>
-              <div class="col-md-10">
+              <div class="col-9">
                 <p class="fw-bold">Email</p>
                 <p>royaltravels@gmail.com</p>
               </div>
             </div><hr>
             <!-- Time -->
             <div class="row">
-              <div class="col-md-2">
+              <div class="col-3">
                 <span class="fa fa-solid fa-business-time fa-2xl"></span>
               </div>
-              <div class="col-md-10">
+              <div class="col-9">
                 <p class="fw-bold">Business Hours</p>
                 <p>Mon-Sat 10:00 AM - 07:00 PM</p>
               </div>
@@ -95,7 +95,7 @@
           </div>
           </div>
         </div>
-        <div class="col-md-8">
+        <div class="col-lg-7 col-sm-12">
           <p class="bold-title">Send us a message</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>sed do
