About responsive changed

--- a/about.html
+++ b/about.html
@@ -22,15 +22,15 @@
 
 <body>
     <div class="page-header">
-        <h2>About Us</h2>
+        <h2>ABOUT US</h2>
     </div>
     <div>
-        <div class="row">
-            <div class="col-md-6">
-                <img
-                    src="https://img.freepik.com/free-photo/travel-concept-with-baggage_23-2149153260.jpg?2&w=826&t=st=1680610356~exp=1680610956~hmac=1a26dd131c3360ac1ebfd2ab51040df038648ec360154d232684940d98e14352">
+        <div class="row mb-5 p-5">
+            <div class="col-lg-6 col-sm-12">
+                <img class="img-fluid"
+                    src="">
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6 col-sm-12">
                 <div class="about-us">
                     <p class="cursive-text align-item-center">About Us</p>
                     <h1 class="bold-title">Royal Travels <br>Planning<br>Your Journey</h1>
@@ -41,26 +41,26 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur inventore asperiores veniam
                         dolor explicabo, quaerat non libero aut autem repellat.</p>
                 </div>
-                <div class="col-md-3 my-auto">
+                <div class="col-md-5 col-sm-12 justify-content-center my-auto">
                     <a class="btns btn-out-sea" href="">Learn More &nbsp; <i
                             class="fa-solid fa-arrow-right fa-beat fa-xs"></i></a>
                 </div>
             </div>
         </div>
         <!-- Why Us content  -->
-        <section class="fea-cons">
+        <section class="fea-cons mb-2">
             <div class="container-fluid fea-con">
                 <p class="cursive-text text-center">Why Us</p>
-                <h1 class="bold-title text-center">We Make All The<br>Process Easy</h1>
+                <h1 class="bold-title text-center">We Make Things Easier</h1>
             </div>
             <div class="row feature">
                 <!-- box 1 -->
-                <div class="col-md-4">
-                    <div class="row align-items-center justify-content-around">
-                        <div class="col-md-3">
+                <div class="col-lg-4 col-md-12">
+                    <div class="row align-items-center">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
                             <i class="fa-solid fa-van-shuttle"></i>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-lg-9 col-md-10 col-sm-10">
                             <p class="small-title">Best Travel Agent</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
                                 quae et porro ab tempore quaerat nisi nemo.</p>
@@ -68,12 +68,12 @@
                     </div>
                 </div>
                 <!-- box 2 -->
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="row align-items-center">
-                        <div class="col-md-3">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
                             <i class="fa-sharp fa-solid fa-globe"></i>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-lg-9 col-md-10 col-sm-10">
                             <p class="small-title">Trust & Safety</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
                                 quae et porro ab tempore quaerat nisi nemo.</p>
@@ -81,12 +81,12 @@
                     </div>
                 </div>
                 <!-- box 3 -->
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="row align-items-center">
-                        <div class="col-md-3">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
                             <i class="fa-solid fa-location-dot"></i>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-lg-9 col-md-10 col-sm-10">
                             <p class="small-title">Best Price Guarantee</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
                                 quae et porro ab tempore quaerat nisi nemo.</p>
@@ -95,12 +95,12 @@
                 </div>
             </div>
             <div class="row feature">
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="row align-items-center justify-content-around">
-                        <div class="col-md-3">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
                             <i class="fa-sharp fa-solid fa-plane"></i>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-lg-9 col-md-10 col-sm-10">
                             <p class="small-title">Beautiful Places</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
                                 quae et porro ab tempore quaerat nisi nemo.</p>
@@ -108,12 +108,12 @@
                     </div>
                 </div>
                 <!-- box 5 -->
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="row align-items-center">
-                        <div class="col-md-3">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
                             <i class="fa-solid fa-route"></i>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-lg-9 col-md-10 col-sm-10">
                             <p class="small-title">Passionate Travel</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
                                 quae et porro ab tempore quaerat nisi nemo.</p>
@@ -121,12 +121,12 @@
                     </div>
                 </div>
                 <!-- box 6 -->
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="row align-items-center">
-                        <div class="col-md-3">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
                             <i class="fa-solid fa-car-side"></i>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-lg-9 col-md-10 col-sm-10">
                             <p class="small-title">Fast Booking</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolore illo ipsam
                                 quae et porro ab tempore quaerat nisi nemo.</p>
