--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
               <a class="nav-link" href="">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">About </a>
+              <a class="nav-link" href="/about.html">About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Spots </a>
+              <a class="nav-link" href="/packages.html">Spots </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/gallery.html">Gallery</a>
