--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <nav id="navbar" class="navbar navbar-expand-lg mainnav">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="/images/royal-dark-logo.png" width="200px" height="100px" />
+          <img src="/images/Logo.svg" width="200px" />
         </a>
         <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
           <span class="navbar-toggler-icon"></span>
