Nav and About Changes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
         <a class="navbar-brand" href="index.html">
           <img src="/images/Logo.svg" width="200px" />
         </a>
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+        <button
+          class="navbar-toggler"
+          data-bs-toggle="collapse"
+          data-bs-target="#nav"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div id="nav" class="collapse navbar-collapse navspace">
