Responsive Bug Fix All Pages

--- a/index.html
+++ b/index.html
@@ -377,17 +377,17 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="slide-box">
-            <img class="img-fluid" src="/images/slide1.jpg" alt="..." />
+            <img class="img-fluid" src="/images/ban1.jpg" alt="..." />
           </div>
         </div>
         <div class="carousel-item">
           <div class="slide-box">
-            <img class="img-fluid" src="/images/slide2.jpg" alt="..." />
+            <img class="img-fluid" src="/images/ban2.jpg" alt="..." />
           </div>
         </div>
         <div class="carousel-item">
           <div class="slide-box">
-            <img class="img-fluid" src="/images/slide3.jpg" alt="..." />
+            <img class="img-fluid" src="/images/ban3.jpg" alt="..." />
           </div>
         </div>
       </div>
