--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <!-- css link -->
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/home-about.css">
     <!-- Bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,11 +25,11 @@
     <div class="page-header">
         <h2>ABOUT US</h2>
     </div>
-    <div>
-        <div class="row mb-5 p-5">
+    <div class="abt-cont">
+        <div class="row mb-5 p-5 justify-content-center align-items-center">
             <div class="col-lg-6 col-sm-12">
                 <img class="img-fluid"
-                    src="">
+                    src="images/aboutus-tour.png">
             </div>
             <div class="col-lg-6 col-sm-12">
                 <div class="about-us">
@@ -37,7 +38,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus quo cum asperiores totam
                         est nihil voluptate cupiditate suscipit.
                         Quaerat quam quibusdam repellendus autem facilis unde animi illo? Illo neque numquam provident
-                        laborum molestiae quam.</p>
+                        laborum molestiae quam.</p> <br>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur inventore asperiores veniam
                         dolor explicabo, quaerat non libero aut autem repellat.</p>
                 </div>
@@ -49,15 +50,15 @@
         </div>
         <!-- Why Us content  -->
         <section class="fea-cons mb-2">
-            <div class="container-fluid fea-con">
+            <div class="container-fluid">
                 <p class="cursive-text text-center">Why Us</p>
                 <h1 class="bold-title text-center">We Make Things Easier</h1>
             </div>
             <div class="row feature">
                 <!-- box 1 -->
-                <div class="col-lg-4 col-md-12">
-                    <div class="row align-items-center">
-                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
+                <div class="col-lg-4 col-md-12 feat-item">
+                    <div class="row align-items-center justify-content-center">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-items-center mb-2 icon-box">
                             <i class="fa-solid fa-van-shuttle"></i>
                         </div>
                         <div class="col-lg-9 col-md-10 col-sm-10">
@@ -68,9 +69,9 @@
                     </div>
                 </div>
                 <!-- box 2 -->
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 feat-item">
                     <div class="row align-items-center">
-                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-items-center mb-2 icon-box">
                             <i class="fa-sharp fa-solid fa-globe"></i>
                         </div>
                         <div class="col-lg-9 col-md-10 col-sm-10">
@@ -81,9 +82,9 @@
                     </div>
                 </div>
                 <!-- box 3 -->
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 feat-item">
                     <div class="row align-items-center">
-                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-items-center mb-2 icon-box">
                             <i class="fa-solid fa-location-dot"></i>
                         </div>
                         <div class="col-lg-9 col-md-10 col-sm-10">
@@ -95,9 +96,9 @@
                 </div>
             </div>
             <div class="row feature">
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 feat-item">
                     <div class="row align-items-center justify-content-around">
-                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-items-center mb-2 icon-box">
                             <i class="fa-sharp fa-solid fa-plane"></i>
                         </div>
                         <div class="col-lg-9 col-md-10 col-sm-10">
@@ -108,9 +109,9 @@
                     </div>
                 </div>
                 <!-- box 5 -->
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 feat-item">
                     <div class="row align-items-center">
-                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-items-center mb-2 icon-box">
                             <i class="fa-solid fa-route"></i>
                         </div>
                         <div class="col-lg-9 col-md-10 col-sm-10">
@@ -121,9 +122,9 @@
                     </div>
                 </div>
                 <!-- box 6 -->
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 feat-item">
                     <div class="row align-items-center">
-                        <div class="col-lg-3 col-md-2 col-sm-2 align-item-center mb-2">
+                        <div class="col-lg-3 col-md-2 col-sm-2 align-items-center mb-2 icon-box">
                             <i class="fa-solid fa-car-side"></i>
                         </div>
                         <div class="col-lg-9 col-md-10 col-sm-10">
