--- a/gallery.html
+++ b/gallery.html
@@ -23,58 +23,58 @@
     </div>
     <div class="gal-box container">
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/beach.jpeg" alt="" class="gal-img img-fluid">
+        <img src="../images/beach.jpeg" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
       <div class="gal-item" data-bs-toggle="modal" data-bs-target="#img-modal">
-        <img src="/images/city-coast.webp" alt="" class="gal-img img-fluid">
+        <img src="../images/city-coast.webp" alt="" class="gal-img img-fluid">
       </div>
 
     </div>
