--- a/index.html
+++ b/index.html
@@ -217,15 +217,15 @@
           <div class="about-content">
             <p class="cursive-text">Make it memorable</p>
             <p class="bold-title">
-              We create the <br />
-              trips you love
+              Exceeding your expectations in travel is our speciality!
             </p>
             <p class="about-para">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde
-              doloribus quo cum asperiores totam est nihil voluptate cupiditate
-              suscipit. Quaerat quam quibusdam repellendus autem facilis unde
-              animi illo? Illo neque numquam provident laborum molestiae quam.
+              Relaxing family trips or fun-filled corporate getaways! 
+              Everything is possible when you have Royal Travels by your side.
+              From clean and cosy rides to hassle-free access to your dream spots, 
+              we got it all to give you a stellar vacation..
             </p>
+           
           </div>
         </div>
       </div>
@@ -242,11 +242,13 @@
               />
             </div>
             <div class="col-sm-8">
-              <p class="title">Best Tours</p>
+              <p class="title">Travel with ease and comfort!</p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptates dolore illo ipsam quae et porro ab tempore quaerat
-                nisi nemo.
+                Your dream travels are made joyful and comfortable with our fully furnished, 
+                perfectly maintained, 14-seater Hi-Tech Tempo Travellers.Also, the convenience 
+                of your rides is enhanced by Triple A/C and leather seats with Push Back.
+
+
               </p>
             </div>
           </div>
@@ -262,11 +264,12 @@
               />
             </div>
             <div class="col-sm-8">
-              <p class="title">Best Tours</p>
+              <p class="title">Enjoy your ride with music and movies!</p>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Voluptates, eligendi nobis. Commodi necessitatibus explicabo
-                tempore maxime culpa aspernatur
+                With our 5.1 surround sound system, the fun and excitement 
+                begin as soon as the ride starts. Your enjoyment doesn't have 
+                to wait till you reach the destination, as movies and music 
+                can make your entire ride a fun-filled experience.
               </p>
             </div>
           </div>
@@ -282,11 +285,11 @@
               />
             </div>
             <div class="col-sm-8">
-              <p class="title">Best Tours</p>
+              <p class="title">Our years of experience will guide your way!</p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                veritatis tempora facere consectetur recusandae illo vitae
-                minima ullam commodi nostrum.
+                We have fulfilled the travel dreams of many for more than 12 years
+                in and around Pollachi. Also, our eight-year experience in aiding 
+                tours and travels in and around Coimbatore makes us a perfect choice for a peaceful journey.
               </p>
             </div>
           </div>
@@ -307,9 +310,14 @@
           <p class="pkg-days">3 Days / 5 Nights</p>
           <div class="pkg-body">
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque,
-              quia aperiam vitae assumenda minima et, corrupti quibusdam illum
-              saepe velit, nisi deleniti perspiciatis excepturi quod!
+              Udhagamandalam is the name of the town that is lovingly called 
+              by many as Ooty. It is also rightfully referred to as "The Queen 
+              of Hill Stations," and it has something to surprise you even after 
+              a hundred visits. From Pykara Lake to Dodabetta Peak, Ooty encompasses 
+              lots of treasures within itself. Also, the cold weather and the misty 
+              outlook of the town are some of its major points of attraction. So, 
+              if you are a lover of nature and peaceful environments, Ooty is sure 
+              to captivate you and claim a permanent place in your mind.
             </p>
             <button class="btn btn-crush">Know More</button>
           </div>
@@ -322,9 +330,16 @@
           <p class="pkg-days">3 Days / 5 Nights</p>
           <div class="pkg-body">
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque,
-              quia aperiam vitae assumenda minima et, corrupti quibusdam illum
-              saepe velit, nisi deleniti perspiciatis excepturi quod!
+              Many of us have visited Kodaikanal whenever we had a chance, especially 
+              in the summer season. It is one of the well-known tourist spots in South 
+              India, and it's a dream destination for a rejuvenating retreat at the 
+              weekends. One thing you cannot miss while visiting Kodaikanal is the 
+              lake that is named after the hill station. Enjoying boat rides in the 
+              lake surrounded by mist will feel like something straight out of your 
+              dreams. The forests of Kodaikanal are a sight for sore eyes, and even 
+              the town of Kodaikanal is a beautiful resort for leisure walks. So, 
+              choose our travel services to let us take you on a perfect trip to 
+              the wonderful "Princess of Hill Station." 
             </p>
             <button class="btn btn-crush">Know More</button>
           </div>
@@ -337,9 +352,15 @@
           <p class="pkg-days">3 Days / 5 Nights</p>
           <div class="pkg-body">
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque,
-              quia aperiam vitae assumenda minima et, corrupti quibusdam illum
-              saepe velit, nisi deleniti perspiciatis excepturi quod!
+              Munnar is a magnificent hill station that resides in the mountain range 
+              called the Western Ghats. Even though it is famous for the visits of newly 
+              married couples, its heavenly outlook can win all our hearts with just a 
+              mere glance. Also, if you are lucky enough to visit Munnar during the flowering 
+              season of the Kurinji flowers, be prepared to be swept over by their breathtaking 
+              view. Munnar has rich wildlife, and it holds many surprises within itself for you 
+              to experience, like Virgin forests and massive waterfalls. If you haven't been to 
+              Munnar, be quick to book a trip to this enchanting location and leave with a lot 
+              of memories to treasure for a lifetime
             </p>
             <button class="btn btn-crush">Know More</button>
           </div>
